--- a/app/src/main/res/values-zh-rCN/arrays.xml
+++ b/app/src/main/res/values-zh-rCN/arrays.xml
@@ -372,7 +372,7 @@
         <item>功能</item>
         <item>收音</item>
         <item>按键</item>
-        <item>CANBUS</item>
+        <item>CAN</item>
         <item>音量</item>
         <item>应用</item>
         <item>其他</item>
