--- a/app/src/main/res/values-zh-rTW/arrays.xml
+++ b/app/src/main/res/values-zh-rTW/arrays.xml
@@ -177,7 +177,7 @@
         <item>功能</item>
         <item>收音</item>
         <item>按鍵</item>
-        <item>CANBUS</item>
+        <item>CAN</item>
         <item>音量</item>
         <item>應用</item>
         <item>其他</item>
